// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPassword.svelte > should render email/password auth 1`] = `
<div>
  <input-field
    class="flex flex-col input-email empty"
  >
    <label
      for="email"
    >
      email
    </label>
     
    <field
      aria-label="email"
      class="w-full flex flex-row items-center"
    >
      <icon
        aria-label="i-auth-email"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </icon>
       
       
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      
       
    </field>
     
  </input-field>
   
  <input-field
    class="flex flex-col input-password empty"
  >
    <label
      for="password"
    >
      Password
    </label>
     
    <field
      aria-label="Password"
      class="w-full flex flex-row items-center"
    >
      <icon
        aria-label="i-auth-password"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </icon>
       
       
      <input
        id="password"
        name="password"
        password=""
        type="password"
      />
      
      
       
    </field>
     
  </input-field>
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
</div>
`;

exports[`AuthPassword.svelte > should render phone/password auth 1`] = `
<div>
  <input-field
    class="flex flex-col input-tel empty"
  >
    <label
      for="email"
    >
      tel
    </label>
     
    <field
      aria-label="tel"
      class="w-full flex flex-row items-center"
    >
      <icon
        aria-label="i-auth-tel"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-tel"
        />
      </icon>
       
       
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="url"
      />
      
      
       
    </field>
     
  </input-field>
   
  <input-field
    class="flex flex-col input-password empty"
  >
    <label
      for="password"
    >
      Password
    </label>
     
    <field
      aria-label="Password"
      class="w-full flex flex-row items-center"
    >
      <icon
        aria-label="i-auth-password"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </icon>
       
       
      <input
        id="password"
        name="password"
        password=""
        type="password"
      />
      
      
       
    </field>
     
  </input-field>
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
</div>
`;
